fix: set `min-inline-size` and `max-inline-size` to ensure icons are not cropped in webkit
closes #5247

--- a/packages/foundations/scss/icons/_icon-helpers.scss
+++ b/packages/foundations/scss/icons/_icon-helpers.scss
@@ -162,6 +162,8 @@ $default-icon-font-size: var(--db-icon-font-size, #{$default-icon-size-rem});
 	vertical-align: var(--db-icon-vertical-align, middle);
 	block-size: $default-icon-font-size;
 	inline-size: $default-icon-font-size;
+	min-inline-size: $default-icon-font-size;
+	max-inline-size: $default-icon-font-size;
 
 	@include icon-content($default-icon-content); // TODO: ONLY FOR data-icon
 
